Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-shell gnome-shell
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,051
    • Issues 2,051
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 152
    • Merge requests 152
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gnome-shellgnome-shell
  • Issues
  • #2757
Closed
Open
Issue created May 06, 2020 by Eric Sirianni@sirianni

Gnome shell crashes when screen lock attempted

When I attempt to lock the screen (manually or via inactivity timeout), gnome-shell crashes. My session state is fine, and nothing is lost, but I'm unable to ever lock the screen or shut off the display.

May 05 20:19:52 sirianni-tp gnome-shell[109186]: St:ERROR:../gnome-shell/src/st/st-theme.c:1048:_st_theme_resolve_url: assertion failed: (base_file)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: Bail out! St:ERROR:../gnome-shell/src/st/st-theme.c:1048:_st_theme_resolve_url: assertion failed: (base_file)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: == Stack trace for context 0x563b9f42c910 ==
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #0   563ba5f2fe70 i   resource:///org/gnome/shell/ui/extensionSystem.js:107 (257bddd68178 @ 467)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #1   563ba5f2fde0 i   resource:///org/gnome/shell/ui/extensionSystem.js:593 (257bddd6b358 @ 15)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #2   7ffdb88da030 b   self-hosted:266 (8db0d0b31f0 @ 259)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #3   563ba5f2fd50 i   resource:///org/gnome/shell/ui/extensionSystem.js:592 (257bddd6b2e0 @ 98)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #4   563ba5f2fcc0 i   resource:///org/gnome/shell/ui/extensionSystem.js:610 (257bddd6b3d0 @ 82)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #5   7ffdb88dae10 b   self-hosted:1003 (1b7a3f66fd30 @ 423)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #6   7ffdb88daf10 b   resource:///org/gnome/gjs/modules/core/_signals.js:133 (257bdddcb2e0 @ 427)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #7   7ffdb88db9f0 b   resource:///org/gnome/shell/ui/sessionMode.js:195 (17b2eeb24b50 @ 286)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #8   563ba5f2fb60 i   resource:///org/gnome/shell/ui/sessionMode.js:156 (17b2eeb24970 @ 40)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #9   563ba5f2faa8 i   resource:///org/gnome/shell/ui/screenShield.js:571 (17b2eeb0fb50 @ 191)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #10   563ba5f2f9e8 i   resource:///org/gnome/shell/ui/screenShield.js:620 (17b2eeb0fbc8 @ 419)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #11   563ba5f2f948 i   resource:///org/gnome/shell/misc/systemActions.js:417 (193aae454808 @ 88)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #12   563ba5f2f8b0 i   resource:///org/gnome/shell/misc/systemActions.js:310 (193aae454268 @ 158)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #13   563ba5f2f818 i   resource:///org/gnome/shell/ui/appDisplay.js:2595 (193aae4325b0 @ 42)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #14   563ba5f2f788 i   resource:///org/gnome/shell/ui/search.js:718 (193aae43c3d0 @ 82)
May 05 20:19:52 sirianni-tp gnome-shell[109186]: #15   563ba5f2f6d8 i   resource:///org/gnome/shell/ui/viewSelector.js:576 (193aae46bad8 @ 743)

May 05 20:19:53 sirianni-tp systemd-coredump[109744]: Process 109186 (gnome-shell) of user 1000 dumped core.
                                                      
                                                      Stack trace of thread 109186:
                                                      #0  0x00007f7f1fd4cce5 raise (libc.so.6 + 0x3bce5)
                                                      #1  0x0000563b9d8269e9 n/a (gnome-shell + 0x29e9)
                                                      #2  0x00007f7f1fd4cd70 __restore_rt (libc.so.6 + 0x3bd70)
                                                      #3  0x00007f7f1fd4cce5 raise (libc.so.6 + 0x3bce5)
                                                      #4  0x00007f7f1fd36857 abort (libc.so.6 + 0x25857)
                                                      #5  0x00007f7f1f78e062 n/a (libglib-2.0.so.0 + 0x1c062)
                                                      #6  0x00007f7f1f7bb51d g_assertion_message_expr (libglib-2.0.so.0 + 0x4951d)
                                                      #7  0x00007f7f1ead53bf _st_theme_resolve_url (libst-1.0.so + 0x3f3bf)
                                                      #8  0x00007f7f1ead863a _st_theme_node_ensure_background (libst-1.0.so + 0x4263a)
                                                      #9  0x00007f7f1ead9e76 st_theme_node_paint_equal (libst-1.0.so + 0x43e76)
                                                      #10 0x00007f7f1ead123b n/a (libst-1.0.so + 0x3b23b)
                                                      #11 0x00007f7f1ead15ab st_widget_style_changed (libst-1.0.so + 0x3b5ab)
                                                      #12 0x00007f7f1ead254c n/a (libst-1.0.so + 0x3c54c)
                                                      #13 0x00007f7f1ead1550 st_widget_style_changed (libst-1.0.so + 0x3b550)
                                                      #14 0x00007f7f1ead254c n/a (libst-1.0.so + 0x3c54c)
                                                      #15 0x00007f7f1ead1550 st_widget_style_changed (libst-1.0.so + 0x3b550)
                                                      #16 0x00007f7f1ead254c n/a (libst-1.0.so + 0x3c54c)
                                                      #17 0x00007f7f1ead1550 st_widget_style_changed (libst-1.0.so + 0x3b550)
                                                      #18 0x00007f7f1ead254c n/a (libst-1.0.so + 0x3c54c)
                                                      #19 0x00007f7f1f8d861a g_closure_invoke (libgobject-2.0.so.0 + 0x3e61a)
                                                      #20 0x00007f7f1f8b997e n/a (libgobject-2.0.so.0 + 0x1f97e)
                                                      #21 0x00007f7f1f8bcab9 g_signal_emit_valist (libgobject-2.0.so.0 + 0x22ab9)
                                                      #22 0x00007f7f1f8be6b0 g_signal_emit (libgobject-2.0.so.0 + 0x246b0)
                                                      #23 0x00007f7f1ead3cd3 n/a (libst-1.0.so + 0x3dcd3)
                                                      #24 0x00007f7f1f8bd0a0 g_signal_emit_valist (libgobject-2.0.so.0 + 0x230a0)
                                                      #25 0x00007f7f1f8be6b0 g_signal_emit (libgobject-2.0.so.0 + 0x246b0)
                                                      #26 0x00007f7f1ead548d st_theme_unload_stylesheet (libst-1.0.so + 0x3f48d)

I am running Gnome Shell 3.36.2 on Manjaro Linux

$ pamac info gnome-shell
Name                 : gnome-shell
Version              : 1:3.36.2+7+ge4199c71c-1
Edited May 06, 2020 by Eric Sirianni
Assignee
Assign to
Time tracking